# FastGFX

./: .gitignore  CMakeLists.txt  README.md  compile.sh  download_deps.sh
examples/: logo.cpp  logo_blur.cpp
include/: fastgfx.h
js/: Animator.js  SpritesTexture.js  TextureManager.js  build-js.js  package.json  runtime.js
src/: Engine.cpp  Engine.h  Image.cpp  Image.h  Layer.cpp  Layer.h  LineLayer.cpp  LineLayer.h  PolygonLayer.cpp  PolygonLayer.h  Sprite.cpp  Sprite.h  SpriteBuffer.cpp  SpriteBuffer.h  SpriteFont.cpp  SpriteFont.h  SpriteLayer.cpp  SpriteLayer.h  SpritesTexture.cpp  SpritesTexture.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  TextureTransitionLayer.cpp  TextureTransitionLayer.h  TexturedBuffer.cpp  TexturedBuffer.h  TexturedLayer.cpp  TexturedLayer.h  config.h  fastgfx.cpp  fastgfx.h  imageLoader.cpp  shaders.cpp  shaders.h  vectors.h
